--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,15 @@
 body {
-    background-color: #F8F8F8;
+    background-color: #c2fcfc;
+    
 }
 
 div#container {
     margin-top: 5%;
 }
-
+.centered-image {
+    margin: 0 auto; /* Esto centra horizontalmente la imagen dentro de su contenedor */
+    display: block; /* Esto asegura que la imagen se comporte como un bloque y no como un elemento en línea */
+  }
 div#space {
     display: block;
     margin: 0 auto;
@@ -17,9 +21,10 @@ div#space {
 div#logo {
     display: block;
     margin: 0 auto;
+    padding-bottom: 20px;
     width: 500px;
     text-align: center;
-    font-size: 30px;
+    font-size: 50px;
     font-family: Calibri;
     /*border-bottom: 1px solid black;*/
 }
@@ -53,9 +58,7 @@ div#results {
     border: none;
     color: white;
     padding: 16px 32px;
-    text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
     -webkit-transition-duration: 0.4s;
